Added PureScript project and restructured folders.
* Started work on the IDE with PureScript;
* Removed one layer of LowCode folder;
* Added miscellaneous (ideas, class diagram etc) files;
* Updated .gitignore with PureScript and JavaScript stuff.

--- a/LowCode/LowCode.fsproj
+++ b/LowCode/LowCode.fsproj
@@ -17,4 +17,8 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FSharpPlus" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
