Folder structure changes and Draggable changes.
* Removed Editor folders from IDE, since everything that is in this
folder is part of the Editor logic anyway;
* Fixed an issue in the .gitignore where the dist folder was entirely
ignored, thus not commiting the HTML and CSS files;
* Draggable now accepts slots as its children, although this logic has
not been completely implemented (nor tested) yet;
* Draggable now accepts HTML of various types;
* Added an Element module to include all information of types that will
be passed to the AST. In the future, it's expect to include information
such as all CSS elements, its children, position etc.

--- a/.gitignore
+++ b/.gitignore
@@ -107,7 +107,7 @@ typings/
 .nuxt
 
 # rollup.js default build output
-dist/
+#dist/
 
 # Uncomment the public line if your project uses Gatsby
 # https://nextjs.org/blog/next-9-1#public-directory-support
@@ -142,6 +142,12 @@ node_modules
 # Generated files
 .psci
 output
+
+### Project output ###
+.pulp-cache
+.spago
+.purs-repl
+editor.js
 
 ### Vim ###
 # Swap
