--- a/low-code.cabal
+++ b/low-code.cabal
@@ -20,18 +20,30 @@ library
     , text         >=1 && <2
     , transformers >=0 && <1
   default-extensions:
-      FlexibleInstances
+      DeriveFunctor
+    , FlexibleInstances
     , LambdaCase
     , OverloadedStrings
+    , MultiParamTypeClasses
   default-language:     Haskell2010
   exposed-modules:
-      Language.LowCode
-    , Language.LowCode.Codegen
-    , Language.LowCode.Emit
+      Language.Codegen
+    , Language.Common
+    , Language.Emit
+    , Language.HTML
+    , Language.HTML.AST
+    , Language.HTML.Printer
+    , Language.JavaScript
+    , Language.JavaScript.AST
+    , Language.JavaScript.Printer
+    , Language.LanguageConverter
+    , Language.LowCode
     , Language.LowCode.Logic
-    , Language.LowCode.Logic.Codegen
+    , Language.LowCode.Logic.AST
+    , Language.LowCode.Logic.JavaScriptConverter
     , Language.LowCode.UI
-    , Language.LowCode.UI.Codegen
+    , Language.LowCode.UI.AST
+    , Language.LowCode.UI.HTMLConverter
 --  ghc-options:          -Wall
   hs-source-dirs:       src
 
