--- a/low-code.cabal
+++ b/low-code.cabal
@@ -15,49 +15,56 @@ version:             0.1.0.0
 
 library
   build-depends:
-      base         >=4 && <5
-    , containers   >=0 && <1
+      containers   >=0 && <1
     , text         >=1 && <2
     , transformers >=0 && <1
+    , universum    >=1 && <2
   default-extensions:
       DeriveFunctor
     , FlexibleInstances
     , LambdaCase
     , OverloadedStrings
     , MultiParamTypeClasses
+    , NoImplicitPrelude
+    , TypeFamilies
   default-language:     Haskell2010
   exposed-modules:
       Language.Codegen
     , Language.Common
+    , Language.CSS
+    , Language.CSS.AST
+    , Language.CSS.Codegen
     , Language.Emit
     , Language.HTML
     , Language.HTML.AST
     , Language.HTML.Attributes
+    , Language.HTML.Codegen
     , Language.HTML.Elements
-    , Language.HTML.Printer
     , Language.JavaScript
     , Language.JavaScript.AST
-    , Language.JavaScript.Printer
+    , Language.JavaScript.Codegen
     , Language.LanguageConverter
-    , Language.LowCode
     , Language.LowCode.Logic
     , Language.LowCode.Logic.AST
     , Language.LowCode.Logic.JavaScriptConverter
     , Language.LowCode.UI
     , Language.LowCode.UI.AST
     , Language.LowCode.UI.HTMLConverter
---  ghc-options:          -Wall
+  ghc-options:          -Wall
   hs-source-dirs:       src
 
 executable LowCode
   build-depends:
-      base         >=4 && <5
-    , low-code     >=0 && <1
+      low-code     >=0 && <1
     , text         >=1 && <2
+    , universum    >=1 && <2
   default-extensions:
-      OverloadedStrings
-  default-language:    Haskell2010
-  hs-source-dirs:      app
-  main-is:             Main.hs
+      NoImplicitPrelude
+    , OverloadedStrings
+    , TypeFamilies
+  default-language:     Haskell2010
+  ghc-options:          -Wall
+  hs-source-dirs:       app
+  main-is:              Main.hs
   -- other-extensions:    
   -- other-modules:       
