--- a/low-code.cabal
+++ b/low-code.cabal
@@ -15,7 +15,8 @@ version:             0.1.0.0
 
 library
   build-depends:
-      containers   >=0 && <1
+      base         >=4 && <5
+    , containers   >=0 && <1
     , text         >=1 && <2
     , transformers >=0 && <1
     , universum    >=1 && <2
