--- a/low-code.cabal
+++ b/low-code.cabal
@@ -15,11 +15,13 @@ version:             0.1.0.0
 
 library
   build-depends:
-      base         >=4 && <5
+      attoparsec   >=0 && <1
+    , base         >=4 && <5
     , containers   >=0 && <1
     , text         >=1 && <2
     , transformers >=0 && <1
     , universum    >=1 && <2
+    , vector       >=0 && <1
   default-extensions:
       DeriveFunctor
     , FlexibleInstances
@@ -47,6 +49,7 @@ library
     , Language.LanguageConverter
     , Language.LowCode.Logic
     , Language.LowCode.Logic.AST
+    , Language.LowCode.Logic.ExpressionParser
     , Language.LowCode.Logic.JavaScriptConverter
     , Language.LowCode.UI
     , Language.LowCode.UI.AST
