--- a/low-code.cabal
+++ b/low-code.cabal
@@ -3,7 +3,6 @@ build-type:          Simple
 cabal-version:       >=1.10
 category:            Language
 copyright:           Copyright (c) 2020 Bruno Pereira Garcia Caputo, Heitor Toledo Lassarote de Paula & Mauro Alexandre Amaro da Cruz
--- description:         
 extra-source-files:  ChangeLog.md
 homepage:            https://github.com/heitor-lassarote/low-code
 license:             MIT
@@ -15,7 +14,8 @@ version:             0.1.0.0
 
 library
   build-depends:
-      attoparsec   >=0 && <1
+      aeson        >=1 && <2
+    , attoparsec   >=0 && <1
     , base         >=4 && <5
     , containers   >=0 && <1
     , text         >=1 && <2
@@ -24,11 +24,12 @@ library
     , vector       >=0 && <1
   default-extensions:
       DeriveFunctor
+    , DeriveGeneric
     , FlexibleInstances
     , LambdaCase
-    , OverloadedStrings
     , MultiParamTypeClasses
     , NoImplicitPrelude
+    , OverloadedStrings
     , TypeFamilies
   default-language:     Haskell2010
   exposed-modules:
@@ -49,7 +50,6 @@ library
     , Language.LanguageConverter
     , Language.LowCode.Logic
     , Language.LowCode.Logic.AST
-    , Language.LowCode.Logic.ExpressionParser
     , Language.LowCode.Logic.JavaScriptConverter
     , Language.LowCode.UI
     , Language.LowCode.UI.AST
@@ -59,9 +59,9 @@ library
 
 executable LowCode
   build-depends:
-      low-code     >=0 && <1
-    , text         >=1 && <2
-    , universum    >=1 && <2
+      low-code  >=0 && <1
+    , text      >=1 && <2
+    , universum >=1 && <2
   default-extensions:
       NoImplicitPrelude
     , OverloadedStrings
@@ -70,5 +70,3 @@ executable LowCode
   ghc-options:          -Wall
   hs-source-dirs:       app
   main-is:              Main.hs
-  -- other-extensions:    
-  -- other-modules:       
