Added spawn component; Added component info edit; Fix bugs

--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,9 @@
                             "node_modules/bootstrap/dist/js/bootstrap.min.js",
                             "node_modules/metismenu/dist/metisMenu.js",
                             "node_modules/jquery-slimscroll/jquery.slimscroll.min.js",
-                            "src/assets/js/inspinia.js"
+                            "src/assets/js/inspinia.js",
+                            "src/assets/js/get-css.js",
+                            "node_modules/jquery-smarttab/dist/js/jquery.smartTab.min.js"
                         ]
                     },
                     "configurations": {
