Changes in the Logic AST and analyzer.
Changes in AST:
* Start is now treated as a function, and should be provided a name,
variable type and list of argument names.
* Var now expected a variable type.
* Added Return to forcefully exit a function, optionally returning an
expression.
* End is now treated as Null in JSON, and no longer expects an optional
name for the next cycle.
* Added Expression for running miscellaneous expressions. Useful for
Call.
* Call now supports higher kinded types.

Changes to parser:
* nonBinary now deals with function calls in a more optimized manner,
and is able to deal with higher order functions.
* Fixed a bug where variables of type Double where never parsed, instead
causing the entire parser to fail.

Changes to VariableType and VariableIx:
* VariableType is now located in Prim.hs and is renamed to Variable.
* The suffix Ty was dropped from all constructors.
* Added Unit type.
* VariableIx is now located in Prim.hs and is renamed to VariableType.
* The suffix Ix was replaced with Type.
* Added FunctionType and UnitType.

Changes to analyzer:
* The VariableInfo record now contains the variable name. I don't know
why.
* The typechecker was very simple: it just checked whether two variables
in the left and right hand sides of a binary expression were the same
and returned the type. Now it's able to correct infer how the operators
should typecheck (as well as unary operators), and functions can be
typechecked as well.
* The Start symbol now must be the first symbol, always, and it cannot
appear again inside the AST.
* The analyzer now expects a Metadata type (currently containing a list
of externs), so functions declared outside the current AST can be found.

Changes to low-code.cabal:
* A bit more pendantic with things being in alphabetical order;
* Added reference to a test suite (which isn't implemented yet, though).

Miscellaneous:
* Changed explicit do notation with sequence and traverse in some parts.
* JS codegen throws an error 

--- a/low-code.cabal
+++ b/low-code.cabal
@@ -12,51 +12,9 @@ name:                low-code
 synopsis:            A low-code platform for generating builds and source codes.
 version:             0.1.0.0
 
-library
-  build-depends:
-      aeson                 >=1 && <2
-    , attoparsec            >=0 && <1
-    , base                  >=4 && <5
-    , containers            >=0 && <1
-    , text                  >=1 && <2
-    , transformers          >=0 && <1
-    , universum             >=1 && <2
-  default-extensions:
-      BlockArguments
-    , DeriveDataTypeable
-    , DeriveFunctor
-    , DeriveGeneric
-    , FlexibleInstances
-    , LambdaCase
-    , MultiParamTypeClasses
-    , NoImplicitPrelude
-    , OverloadedStrings
-    , TypeFamilies
-  default-language:     Haskell2010
-  exposed-modules:
-      Language.Bundles
-    , Language.Codegen
-    , Language.Common
-    , Language.CSS
-    , Language.CSS.AST
-    , Language.CSS.Codegen
-    , Language.Emit
-    , Language.HTML
-    , Language.HTML.AST
-    , Language.HTML.Codegen
-    , Language.JavaScript
-    , Language.JavaScript.AST
-    , Language.JavaScript.Codegen
-    , Language.LanguageConverter
-    , Language.LowCode.Logic
-    , Language.LowCode.Logic.Analyzer
-    , Language.LowCode.Logic.AST
-    , Language.LowCode.Logic.JavaScriptConverter
-    , Language.LowCode.UI
-    , Language.LowCode.UI.AST
-    , Language.LowCode.UI.HTMLConverter
-  ghc-options:          -Wall -Werror -Wincomplete-uni-patterns -Wcompat
-  hs-source-dirs:       src
+source-repository head
+  type: git
+  location: https://github.com/heitor-lassarote/low-code
 
 executable LowCode
   build-depends:
@@ -105,3 +63,61 @@ executable LowCode
   ghc-options:          -Wall -Werror -Wincomplete-uni-patterns -Wcompat
   hs-source-dirs:       app
   main-is:              Main.hs
+
+library
+  build-depends:
+      aeson                 >=1 && <2
+    , attoparsec            >=0 && <1
+    , base                  >=4 && <5
+    , containers            >=0 && <1
+    , text                  >=1 && <2
+    , transformers          >=0 && <1
+    , universum             >=1 && <2
+  default-extensions:
+      BlockArguments
+    , DeriveDataTypeable
+    , DeriveFunctor
+    , DeriveGeneric
+    , FlexibleInstances
+    , LambdaCase
+    , MultiParamTypeClasses
+    , NoImplicitPrelude
+    , OverloadedStrings
+    , TypeFamilies
+  default-language:     Haskell2010
+  exposed-modules:
+      Language.Bundles
+    , Language.Codegen
+    , Language.Common
+    , Language.CSS
+    , Language.CSS.AST
+    , Language.CSS.Codegen
+    , Language.Emit
+    , Language.HTML
+    , Language.HTML.AST
+    , Language.HTML.Codegen
+    , Language.JavaScript
+    , Language.JavaScript.AST
+    , Language.JavaScript.Codegen
+    , Language.LanguageConverter
+    , Language.LowCode.Logic
+    , Language.LowCode.Logic.Analyzer
+    , Language.LowCode.Logic.AST
+    , Language.LowCode.Logic.Prim
+    , Language.LowCode.Logic.Types
+    , Language.LowCode.Logic.JavaScriptConverter
+    , Language.LowCode.UI
+    , Language.LowCode.UI.AST
+    , Language.LowCode.UI.HTMLConverter
+  ghc-options:          -Wall -Werror -Wincomplete-uni-patterns -Wcompat
+  hs-source-dirs:       src
+
+test-suite test
+  build-depends:
+      low-code              >=0 && <1
+    , universum             >=1 && <2
+  default-language:     Haskell2010
+  ghc-options:          -Wall -Werror -Wincomplete-uni-patterns -Wcompat
+  hs-source-dirs:       test
+  main-is:              Tests.hs
+  type:                 exitcode-stdio-1.0
