Get user route and some minor upgrades.
* Now the /user route supports GET, which will return that user's
projects given the correct credentials.
* The database now works with JSON Value instead of Text.
* Added NonScopedBlock to JS AST, so that we can have cool stuff like
top level declarations (outside a block).
* Conversion from Logic variables to JS variables are not done through a
LanguageConverter instance.
* New users will need 13 hash iterations instead of 14.
* Added strictness in a few Logic and JS data constructors.
* JS Codegen now checks if a variable name is a valid JS name.

--- a/low-code.cabal
+++ b/low-code.cabal
@@ -26,17 +26,17 @@ executable LowCode
     , low-code              >=0 && <1
     , monad-logger          >=0 && <1
     , optparse-applicative  >=0 && <1
---    , path                  >=0 && <1
+    , path                  >=0 && <1
     , persistent            >=2 && <3
     , persistent-postgresql >=2 && <3
     , persistent-template   >=2 && <3
---    , temporary             >=1 && <2
+    , temporary             >=1 && <2
     , text                  >=1 && <2
     , universum             >=1 && <2
     , unliftio-core         >=0 && <1
     , yesod                 >=1 && <2
     , yesod-persistent      >=1 && <2
---    , zip                   >=1 && <2
+    , zip                   >=1 && <2
   default-extensions:
       BlockArguments
     , DeriveAnyClass
@@ -74,7 +74,8 @@ library
     , transformers          >=0 && <1
     , universum             >=1 && <2
   default-extensions:
-      BlockArguments
+      BangPatterns
+    , BlockArguments
     , DeriveDataTypeable
     , DeriveFunctor
     , DeriveGeneric
