Implementation of the /build route.
Changes to Foundation:
* Implemented getBuildR.

Changes to low-code.cabal:
* Added directory and filepath dependencies to executable.
* Executable now depends on RecordWildCards and TupleSections.

Changes to Bundles:
* Renamed BundleCssLogicUi to BundleCssHtmlLogic.
* Added the Bundle typeclass, which "generates" the contents of the
bundle, returning a new Status data type.
* BundleCssHtmlLogic is slightly different, supporting generator
options, logic metadata and pages, where each page may contain a name,
CSS, HTML and Logic.

Changes to CSS, HTML and JS codegens:
* Added explicit export list.
* Added FromJSON and ToJSON instances to Options and GeneratorState,
as well as Eq, Generic and Show instances.
* Added a withOptions function to easily insert a set of Options inside
a GeneratorState.

Changes to CSS codegen:
* Replaced get and pure $ emit with gets and emitM, to become consistent
with the remainder of the code.

Changes to JS codegen:
* Merged genArgs function inside genExpression.

Changes to Logic Analyzer:
* LogicAnalyzerT doesn't contain a ExceptT transformer anymore.
* Added an analyzeMany function which deals with multiple ASTs
simultaneously, properly building the functions in symbols list.
* Fixed an incorrect error message in analyze when the first symbol was
Start without being a function, where it would display
StartIsNotFirstSymbol. Changed to NotAFunction.

Miscellaneous changes:
* Removed a redundant "hiding" in an Universum import in Database.
* Logic now exports its Analyzer.
* Metadata was moved from Logic.Types to Logic.AST, and now contains
FromJSON and ToJSON instances.
* Fixed a typo in Logic.Types.

--- a/low-code.cabal
+++ b/low-code.cabal
@@ -21,12 +21,13 @@ executable LowCode
       aeson                 >=1 && <2
     , base                  >=4 && <5
     , cryptonite            >=0 && <1
+    , directory             >=1 && <2
     , esqueleto             >=3 && <4
+    , filepath              >=1 && <2
     , http-types            >=0 && <1
     , low-code              >=0 && <1
     , monad-logger          >=0 && <1
     , optparse-applicative  >=0 && <1
-    , path                  >=0 && <1
     , persistent            >=2 && <3
     , persistent-postgresql >=2 && <3
     , persistent-template   >=2 && <3
@@ -84,6 +85,8 @@ library
     , MultiParamTypeClasses
     , NoImplicitPrelude
     , OverloadedStrings
+    , RecordWildCards
+    , TupleSections
     , TypeFamilies
   default-language:     Haskell2010
   exposed-modules:
