--- a/low-code.cabal
+++ b/low-code.cabal
@@ -77,6 +77,7 @@ library
   default-extensions:
       BangPatterns
     , BlockArguments
+    , DeriveAnyClass
     , DeriveDataTypeable
     , DeriveFunctor
     , DeriveGeneric
@@ -107,8 +108,6 @@ library
     , Language.LowCode.Logic
     , Language.LowCode.Logic.Analyzer
     , Language.LowCode.Logic.AST
-    , Language.LowCode.Logic.Prim
-    , Language.LowCode.Logic.Types
     , Language.LowCode.Logic.JavaScriptConverter
     , Language.LowCode.UI
     , Language.LowCode.UI.AST
