--- a/package.json
+++ b/package.json
@@ -1,64 +1,63 @@
 {
-  "name": "low-code-ui",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^9.1.9",
-    "@angular/cdk": "^9.2.4",
-    "@angular/common": "^9.1.9",
-    "@angular/compiler": "^9.1.9",
-    "@angular/core": "^9.1.9",
-    "@angular/forms": "^9.1.9",
-    "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "^9.1.9",
-    "@angular/platform-browser-dynamic": "^9.1.9",
-    "@angular/router": "^9.1.9",
-    "@ngx-progressbar/core": "^5.3.2",
-    "@ngx-progressbar/http": "^5.3.2",
-    "@ngx-translate/core": "^12.1.2",
-    "@ngx-translate/http-loader": "^4.0.0",
-    "angular-resizable-element": "^3.3.2",
-    "animate.css": "^4.1.0",
-    "bootstrap": "^4.5.0",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.5.1",
-    "jquery-slimscroll": "^1.3.8",
-    "jquery-smarttab": "^3.0.1",
-    "metismenu": "^3.0.6",
-    "ngx-spinner": "^9.0.2",
-    "ngx-toastr": "^12.1.0",
-    "popper.js": "^1.16.1",
-    "rxjs": "^6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "^0.10.3"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.7",
-    "@angular/cli": "^9.1.7",
-    "@angular/compiler-cli": "^9.1.9",
-    "@angular/language-service": "^9.1.9",
-    "@types/jasmine": "^3.5.10",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.0.5",
-    "codelyzer": "^5.2.2",
-    "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "^5.0.2",
-    "karma": "^5.0.9",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "^3.3.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
-    "protractor": "^7.0.0",
-    "ts-node": "^8.10.2",
-    "tslint": "^6.1.2",
-    "typescript": "^3.8.3"
-  }
+    "name": "low-code-ui",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve --proxy-config proxy.config.js",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^9.1.11",
+        "@angular/cdk": "^9.2.4",
+        "@angular/common": "^9.1.11",
+        "@angular/compiler": "^9.1.11",
+        "@angular/core": "^9.1.11",
+        "@angular/forms": "^9.1.11",
+        "@angular/material": "^9.2.4",
+        "@angular/platform-browser": "^9.1.11",
+        "@angular/platform-browser-dynamic": "^9.1.11",
+        "@angular/router": "^9.1.11",
+        "@ngx-progressbar/core": "^5.3.2",
+        "@ngx-progressbar/http": "^5.3.2",
+        "angular-resizable-element": "^3.3.2",
+        "animate.css": "^4.1.0",
+        "bootstrap": "^4.5.0",
+        "font-awesome": "^4.7.0",
+        "jquery": "^3.5.1",
+        "jquery-slimscroll": "^1.3.8",
+        "jquery-smarttab": "^3.1.1",
+        "metismenu": "^3.0.6",
+        "ngx-spinner": "^9.0.2",
+        "ngx-toastr": "^12.1.0",
+        "popper.js": "^1.16.1",
+        "rxjs": "^6.5.5",
+        "smartwizard": "^5.0.0",
+        "tslib": "^2.0.0",
+        "zone.js": "^0.10.3"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^0.901.9",
+        "@angular/cli": "^9.1.9",
+        "@angular/compiler-cli": "^9.1.11",
+        "@angular/language-service": "^9.1.11",
+        "@types/jasmine": "^3.5.11",
+        "@types/jasminewd2": "^2.0.8",
+        "@types/node": "^14.0.13",
+        "codelyzer": "^5.2.2",
+        "jasmine-core": "^3.5.0",
+        "jasmine-spec-reporter": "^5.0.2",
+        "karma": "^5.1.0",
+        "karma-chrome-launcher": "^3.1.0",
+        "karma-coverage-istanbul-reporter": "^3.0.3",
+        "karma-jasmine": "^3.3.1",
+        "karma-jasmine-html-reporter": "^1.5.4",
+        "protractor": "^7.0.0",
+        "ts-node": "^8.10.2",
+        "tslint": "^6.1.2",
+        "typescript": "^3.8.3"
+    }
 }
