Added CORS. Misc. changes to app.
Added Config module with all relevant app configurations:
* ServerConfig now has serverIpFromHeader, whuch gets the IP address
from header.
* ServerConfig now has serverDetailedRequestLogging, which uses the
detailed request logging system.

Changes to Database:
* Moved DBConfig and parseDDBConfig to Config.

Changes to Foundation:
* LowCode now has appLogger attached to it in case logging is needed.
* LowCode now has serverConfig on it.

Changes to Main:
* main no longer uses warp function to initialize the server, as the
addition of CORS required tweaking Yesod settings.
* In general, the removal of warp required a lot of extra helper
functions to be added.
* Moved ServerConfig and parseServerConfig to Config.

Changes to low-code.cabal:
* Added data-default-class, fast-logger, template-haskell, wai,
wai-cors, wai-extra, warp and yesod-core dependencies to executable.
* Added Config to other-modules.
* Added data-default-class dependency to library.

--- a/low-code.cabal
+++ b/low-code.cabal
@@ -21,8 +21,10 @@ executable LowCode
       aeson                 >=1 && <2
     , base                  >=4 && <5
     , cryptonite            >=0 && <1
+    , data-default-class    >=0 && <1
     , directory             >=1 && <2
     , esqueleto             >=3 && <4
+    , fast-logger           >=3 && <4
     , filepath              >=1 && <2
     , http-types            >=0 && <1
     , low-code              >=0 && <1
@@ -31,11 +33,17 @@ executable LowCode
     , persistent            >=2 && <3
     , persistent-postgresql >=2 && <3
     , persistent-template   >=2 && <3
+    , template-haskell      >=2 && <3
     , temporary             >=1 && <2
     , text                  >=1 && <2
     , universum             >=1 && <2
     , unliftio-core         >=0 && <1
+    , wai                   >=3 && <4
+    , wai-cors              >=0 && <1
+    , wai-extra             >=3 && <4
+    , warp                  >=3 && <4
     , yesod                 >=1 && <2
+    , yesod-core            >=1 && <2
     , yesod-persistent      >=1 && <2
     , zip                   >=1 && <2
   default-extensions:
@@ -59,7 +67,8 @@ executable LowCode
   other-extensions:
       UndecidableInstances
   other-modules:
-      Database
+      Config
+    , Database
     , Foundation
   ghc-options:          -Wall -Werror -Wincomplete-uni-patterns -Wcompat
   hs-source-dirs:       app
@@ -70,6 +79,7 @@ library
       aeson                 >=1 && <2
     , base                  >=4 && <5
     , containers            >=0 && <1
+    , data-default-class    >=0 && <1
     , megaparsec            >=8 && <9
     , text                  >=1 && <2
     , transformers          >=0 && <1
