--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^9.1.11",
-        "@angular/cdk": "^9.2.4",
-        "@angular/common": "^9.1.11",
-        "@angular/compiler": "^9.1.11",
-        "@angular/core": "^9.1.11",
-        "@angular/forms": "^9.1.11",
-        "@angular/material": "^9.2.4",
-        "@angular/platform-browser": "^9.1.11",
-        "@angular/platform-browser-dynamic": "^9.1.11",
-        "@angular/router": "^9.1.11",
+        "@angular/animations": "^10.0.3",
+        "@angular/cdk": "^10.0.1",
+        "@angular/common": "^10.0.3",
+        "@angular/compiler": "^10.0.3",
+        "@angular/core": "^10.0.3",
+        "@angular/forms": "^10.0.3",
+        "@angular/material": "^10.0.1",
+        "@angular/platform-browser": "^10.0.3",
+        "@angular/platform-browser-dynamic": "^10.0.3",
+        "@angular/router": "^10.0.3",
         "@ngx-progressbar/core": "^5.3.2",
         "@ngx-progressbar/http": "^5.3.2",
         "angular-resizable-element": "^3.3.2",
@@ -32,22 +32,23 @@
         "jquery-smarttab": "^3.1.1",
         "metismenu": "^3.0.6",
         "ngx-spinner": "^9.0.2",
-        "ngx-toastr": "^12.1.0",
+        "ngx-toastr": "^13.0.0",
         "popper.js": "^1.16.1",
-        "rxjs": "^6.5.5",
-        "smartwizard": "^5.0.0",
+        "rxjs": "^6.6.0",
+        "smartwizard": "^5.1.1",
+        "sweetalert": "^2.1.2",
         "tslib": "^2.0.0",
         "zone.js": "^0.10.3"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.901.9",
-        "@angular/cli": "^9.1.9",
-        "@angular/compiler-cli": "^9.1.11",
-        "@angular/language-service": "^9.1.11",
+        "@angular-devkit/build-angular": "^0.1000.2",
+        "@angular/cli": "^10.0.2",
+        "@angular/compiler-cli": "^10.0.3",
+        "@angular/language-service": "^10.0.3",
         "@types/jasmine": "^3.5.11",
         "@types/jasminewd2": "^2.0.8",
-        "@types/node": "^14.0.13",
-        "codelyzer": "^5.2.2",
+        "@types/node": "^14.0.23",
+        "codelyzer": "^6.0.0",
         "jasmine-core": "^3.5.0",
         "jasmine-spec-reporter": "^5.0.2",
         "karma": "^5.1.0",
