Refactored Logic Analyzer to use RWS instead of State.
* Renamed LogicAnalyzer to Analyzer.
* Changed Analyzer from State to RWS.
* Added runAnalyzer.
* Added AnalyzerWriter and AnalyzerWriter.
* Added functions using default instances for {run,eval,exec}Analyzer,
namely {run,eval,exec}Analyzer'.

--- a/low-code.cabal
+++ b/low-code.cabal
@@ -94,6 +94,7 @@ library
     , FlexibleInstances
     , LambdaCase
     , MultiParamTypeClasses
+    , MultiWayIf
     , NoImplicitPrelude
     , OverloadedStrings
     , RecordWildCards
