--- a/low-code.cabal
+++ b/low-code.cabal
@@ -80,6 +80,7 @@ library
     , base                  >=4 && <5
     , containers            >=0 && <1
     , data-default-class    >=0 && <1
+    , formatting            >=6 && <7
     , megaparsec            >=8 && <9
     , text                  >=1 && <2
     , transformers          >=0 && <1
@@ -98,6 +99,7 @@ library
     , NoImplicitPrelude
     , OverloadedStrings
     , RecordWildCards
+    , RecursiveDo
     , TupleSections
     , TypeFamilies
   default-language:     Haskell2010
