--- a/low-code.cabal
+++ b/low-code.cabal
@@ -38,7 +38,7 @@ common shared-properties
     , TypeFamilies
   default-language:     Haskell2010
 
-executable LowCode
+executable low-code
   import:               shared-properties
   build-depends:
       aeson                 >=1 && <2
