Laid the foundations for generating ADTs.
Changes to low-code.cabal:
* Exposed Utility module.

 Changes to Common:
 * Removed ValueType.

 Changes to Logic AST and JavaScript AST:
 * Removed references to Common's ValueType.
 * Renamed Constant to Literal.
 * Added Literal and Variable to ASTs.

 Changes to JavaScript codegen:
 * Changes relating to the AST changes defined above.

Changes to Logic AST:
* Added Field and Constructor types.
* Added adtTemplates to Environment.
* Changed recordTamplates to use the newly added Field datatype.
* Renamed codegenV to codegenL.
* Added a new Literal type: Algebraic, which represents ADTs (aka
discriminated unions).
* Renamed VariableType to Type.
* Removed Bool and Unit, and instead redefined them as ADTs through
boolType and unitType.

Changes to Logic Analyzer:
* Added NoSuchConstructor error message, for unknown ADT constructors.
* Adapted analyzers to make use of the changes in the AST,
* Added ADT analyzer (WIP).

Changes to Logic to JavaScript converter:
* Added explicit export list, exporting the Language.LanguageConverter
module.
* Convert ADT type using visitor pattern. Although we still don't yet
convert functions that make use of ADTs.

Added Utility module:
* Added findMap function, for finding an item in a Foldable while
applying a map.

--- a/low-code.cabal
+++ b/low-code.cabal
@@ -129,6 +129,7 @@ library
     , Language.LowCode.UI
     , Language.LowCode.UI.AST
     , Language.LowCode.UI.HTMLConverter
+    , Utility
   if flag(lib-Werror)
     ghc-options:        -Werror
   ghc-options:          -Wall -Wincomplete-uni-patterns -Wcompat
