Analyzer builds ASTs and Expressions with Types (WIP).
Changes to low-code.cabal:
* Added mmorph dependency.
* Exposed Language.LowCode.Logic.Error.

Changes to Bundles:
* Make use of new Logic Analyzer (WIP).
* Logic now expects a TopLevel AST rather than a plain AST.

Changes to Codegen:
* Added utility unsafeCodegen and unsafeCodegen' functions.

Changes to Logic:
* Exposed Logic Error.

Changes to Logic AST:
* Added HasMetadata class, which allows easy getting of metadatas.
* Added TopLevel AST, which for now only has the Start constructor,
moved from AST.
* Added metadata to End.
* Added Structure constructor to Expression.
* Moved Algebraic, Array and Record from Literal to Structure.
* Added unit structure.

Changes to Logic Analyzer:
* Moved Error and Warning to Error module.
* Changed RWS from CPS to normal instance.
* Added AnalyzerT.
* {run,eval,exec}analyzer{,'} now works using AnalyzerT.
* Most functions now return the given AST but with its metadata field
changed to Type.
* Most functions are now parametrized over the Maybe type. This may
change in the future (WIP).
* Fixed a naming inconsistency when analyzing If on analyzeImpl, where
true and false branches had its names swapped.
* Removed some extraneous TypeMismatch errors.

Added Logic Error:
* This module contains the error messages previously defined in Logic
Analyzer.
* Removed StartIsNotFirstSymbol error.

Changes to Logic to JavaScript converter:
* Added conversions from missing ASTs.
* Logic AST list no longer is convertible, as this was changed to
TopLevel list instead.

Changes to Utility:
* Moved biject from Logic AST to Utility.

Changes to test Main:
* Adapted to make use of the changes above.

--- a/low-code.cabal
+++ b/low-code.cabal
@@ -97,6 +97,7 @@ library
     , filepath              >=1 && <2
     , formatting            >=6 && <7
     , megaparsec            >=8 && <9
+    , mmorph                >=1 && <2
     , temporary             >=1 && <2
     , text                  >=1 && <2
     , transformers          >=0 && <1
@@ -125,6 +126,7 @@ library
     , Language.LowCode.Logic
     , Language.LowCode.Logic.Analyzer
     , Language.LowCode.Logic.AST
+    , Language.LowCode.Logic.Error
     , Language.LowCode.Logic.JavaScriptConverter
     , Language.LowCode.UI
     , Language.LowCode.UI.AST
