--- a/stack.yaml
+++ b/stack.yaml
@@ -39,7 +39,8 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-# extra-deps: []
+extra-deps:
+- monad-chronicle-1.0.0.1@sha256:7e51e3eac8d105311ba702756bcb43bd12e58e3416660870d5916fb948ac99e6,1881
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
