By default, most datatypes have their fields stricts now.
Changes to Bundles:
* Removed Status in favor of Either.
* Instead of returning some cryptic fail or success types, we now return
GeneratedFail or GeneratedSuccess.
* Fixed a bug that caused successfull codegens to fail if there were
warnings.

Changes to CSS Codegen and Logic:
* When opening the project on GHCi, a warning would be displayed
requiring a deriving strategy to CSS Options and Logic Metadata. This
has been fixed.

Changes to Common:
* BinarySymbol and UnarySymbol now are texts instead of objects in
regards to their JSON serializations.

Changes to JavaScript AST:
* Added Const to AST.
* Added Throw to AST.
* Removed Void from Literal.

Changes to JavaScript Codegen:
* Fixed a problem in Function generation where there wouldn't be commas
separating arguments, effectively concatenating them. E.g., "abc" would
be generated instead of "a, b, c".
* Generator now generates "else if"s properly.

Changes to Logic:
* Export Logic Standard.

Changes to Logic AST:
* Field and Constructor are now type-variable to address some common
usages of records and ADTs. These changes were reflected in
MatchPattern, Structure and Type.
* Added patternToExpr, capable of turning a MatchPattern into an
Expression ().
* Algebraic only expects one field per Constructor now. This is so we
can have F#/Rust style ADTs, which have a slightly better JS generation.
* AlgebraicType now only expects a Name. This is so we can have
self-referring ADTs, otherwise it would create an infinite loop while
trying to build them, besides being impossible to serialize these
infinite structures with JSON.
* Record no longer expects a name.

Changes to Logic Analyzer:
* AnalyzerReader is now empty, and its contents have moved to
AnalyzerState.
* Errors and Warnings are now are dictionary, for faster lookup
according to module.
* ModuleImports has been moved from Logic.Module due to being mostly
internal to the use of the analzer.
* Fixed an iss

--- a/low-code.cabal
+++ b/low-code.cabal
@@ -29,8 +29,11 @@ common shared-properties
     , BangPatterns
     , BlockArguments
     , DeriveFunctor
+    , DerivingStrategies
+    , DuplicateRecordFields
     , FlexibleContexts
     , FlexibleInstances
+    , GeneralizedNewtypeDeriving
     , LambdaCase
     , NoImplicitPrelude
     , OverloadedStrings
@@ -67,9 +70,7 @@ executable low-code
   default-extensions:
       DeriveAnyClass
     , DeriveGeneric
-    , DerivingStrategies
     , GADTs
-    , GeneralizedNewtypeDeriving
     , MultiParamTypeClasses
     , QuasiQuotes
     , StandaloneDeriving
@@ -131,6 +132,7 @@ library
     , Language.LowCode.Logic.Error
     , Language.LowCode.Logic.JavaScriptConverter
     , Language.LowCode.Logic.Module
+    , Language.LowCode.Logic.Standard
     , Language.LowCode.UI
     , Language.LowCode.UI.AST
     , Language.LowCode.UI.HTMLConverter
@@ -145,10 +147,13 @@ test-suite test
   build-depends:
       containers            >=0 && <1
     , data-default-class    >=0 && <1
-    , HUnit                 >=1 && <2
+    , hspec                 >=2 && <3
     , low-code              >=0 && <1
     , QuickCheck            >=2 && <3
-  hs-source-dirs:       test
+    , these                 >=1 && <2
+  other-modules:
+      LogicModuleTests
   ghc-options:          -Wall -Wincomplete-uni-patterns -Wcompat
+  hs-source-dirs:       test
   main-is:              Main.hs
   type:                 exitcode-stdio-1.0
