--- a/package.json
+++ b/package.json
@@ -1,57 +1,53 @@
 {
     "name": "low-code-ui",
-    "version": "0.0.0",
+    "version": "0.0.1",
     "scripts": {
-        "ng": "ng",
-        "start": "ng serve --proxy-config proxy.config.js",
-        "build": "ng build",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e"
+        "start": "ng serve",
+        "build": "ng build"
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^10.0.12",
-        "@angular/cdk": "^10.1.3",
-        "@angular/common": "^10.0.12",
-        "@angular/compiler": "^10.0.12",
-        "@angular/core": "^10.0.12",
-        "@angular/forms": "^10.0.12",
-        "@angular/material": "^10.1.3",
-        "@angular/platform-browser": "^10.0.12",
-        "@angular/platform-browser-dynamic": "^10.0.12",
-        "@angular/router": "^10.0.12",
+        "@angular/animations": "^10.1.4",
+        "@angular/cdk": "^10.2.4",
+        "@angular/common": "^10.1.4",
+        "@angular/compiler": "^10.1.4",
+        "@angular/core": "^10.1.4",
+        "@angular/forms": "^10.1.4",
+        "@angular/material": "^10.2.4",
+        "@angular/platform-browser": "^10.1.4",
+        "@angular/platform-browser-dynamic": "^10.1.4",
+        "@angular/router": "^10.1.4",
         "@ngx-progressbar/core": "^5.3.2",
         "@ngx-progressbar/http": "^5.3.2",
         "angular-resizable-element": "^3.3.3",
-        "animate.css": "^4.1.0",
+        "animate.css": "^4.1.1",
         "bootstrap": "^4.5.2",
         "font-awesome": "^4.7.0",
         "jquery": "^3.5.1",
         "jquery-slimscroll": "^1.3.8",
         "jquery-smarttab": "^3.1.1",
-        "metismenu": "^3.0.6",
+        "metismenu": "^2.7.9",
         "ngx-spinner": "^10.0.1",
-        "ngx-toastr": "^13.0.0",
+        "ngx-toastr": "^13.1.0",
         "popper.js": "^1.16.1",
-        "rxjs": "^6.6.2",
+        "rxjs": "^6.6.3",
         "smartwizard": "^5.1.1",
         "sweetalert": "^2.1.2",
         "tslib": "^2.0.1",
         "zone.js": "^0.11.1"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.1000.7",
-        "@angular/cli": "^10.0.7",
-        "@angular/compiler-cli": "^10.0.12",
-        "@angular/language-service": "^10.0.12",
-        "@types/jasmine": "^3.5.13",
+        "@angular-devkit/build-angular": "^0.1001.4",
+        "@angular/cli": "^10.1.4",
+        "@angular/compiler-cli": "^10.1.4",
+        "@angular/language-service": "^10.1.4",
+        "@types/jasmine": "^3.5.14",
         "@types/jasminewd2": "^2.0.8",
-        "@types/node": "^14.6.0",
-        "codelyzer": "^6.0.0",
+        "@types/node": "^14.11.4",
+        "codelyzer": "^6.0.1",
         "jasmine-core": "^3.6.0",
-        "jasmine-spec-reporter": "^5.0.2",
-        "karma": "^5.1.1",
+        "jasmine-spec-reporter": "^6.0.0",
+        "karma": "^5.2.3",
         "karma-chrome-launcher": "^3.1.0",
         "karma-coverage-istanbul-reporter": "^3.0.3",
         "karma-jasmine": "^4.0.1",
@@ -59,6 +55,6 @@
         "protractor": "^7.0.0",
         "ts-node": "^9.0.0",
         "tslint": "^6.1.3",
-        "typescript": "^3.9.7"
+        "typescript": "^4.0.3"
     }
 }
