--- a/low-code.cabal
+++ b/low-code.cabal
@@ -37,6 +37,7 @@ common shared-properties
     , LambdaCase
     , NoImplicitPrelude
     , OverloadedStrings
+    , QuasiQuotes
     , RecordWildCards
     , TypeFamilies
   default-language:     Haskell2010
@@ -72,7 +73,6 @@ executable low-code
     , DeriveGeneric
     , GADTs
     , MultiParamTypeClasses
-    , QuasiQuotes
     , StandaloneDeriving
     , TemplateHaskell
     , ViewPatterns
@@ -100,6 +100,7 @@ library
     , formatting            >=6 && <7
     , megaparsec            >=8 && <9
     , monad-chronicle       >=1 && <2
+    , raw-strings-qq        >=1 && <2
     , temporary             >=1 && <2
     , text                  >=1 && <2
     , these                 >=1 && <2
@@ -132,7 +133,10 @@ library
     , Language.LowCode.Logic.Error
     , Language.LowCode.Logic.JavaScriptConverter
     , Language.LowCode.Logic.Module
-    , Language.LowCode.Logic.Standard
+    , Language.LowCode.Logic.Parser
+    , Language.LowCode.Logic.Standard.JSON
+    , Language.LowCode.Logic.Standard.Prelude
+    , Language.LowCode.Logic.Type
     , Language.LowCode.UI
     , Language.LowCode.UI.AST
     , Language.LowCode.UI.HTMLConverter
